added save cell

--- a/data_split_mf_ncf.ipynb
+++ b/data_split_mf_ncf.ipynb
@@ -1104,7 +1104,30 @@
       "train_loss (466000/500882): 2.362239360809326\n",
       "train_loss (467000/500882): 2.3622167110443115\n",
       "train_loss (468000/500882): 2.3624446392059326\n",
-      "train_loss (469000/500882): 2.3629162311553955\n"
+      "train_loss (469000/500882): 2.3629162311553955\n",
+      "train_loss (470000/500882): 2.362649917602539\n",
+      "train_loss (471000/500882): 2.36225962638855\n",
+      "train_loss (472000/500882): 2.362189531326294\n",
+      "train_loss (473000/500882): 2.3618416786193848\n",
+      "train_loss (474000/500882): 2.361741065979004\n",
+      "train_loss (475000/500882): 2.36163067817688\n",
+      "train_loss (476000/500882): 2.360917806625366\n",
+      "train_loss (477000/500882): 2.360997438430786\n",
+      "train_loss (478000/500882): 2.3606350421905518\n",
+      "train_loss (479000/500882): 2.3607499599456787\n",
+      "train_loss (480000/500882): 2.3604257106781006\n",
+      "train_loss (481000/500882): 2.3603858947753906\n",
+      "train_loss (482000/500882): 2.3605966567993164\n",
+      "train_loss (483000/500882): 2.360399007797241\n",
+      "train_loss (484000/500882): 2.3603858947753906\n",
+      "train_loss (485000/500882): 2.360152006149292\n",
+      "train_loss (486000/500882): 2.360022783279419\n",
+      "train_loss (487000/500882): 2.359543561935425\n",
+      "train_loss (488000/500882): 2.359550714492798\n",
+      "train_loss (489000/500882): 2.359213352203369\n",
+      "train_loss (490000/500882): 2.359553813934326\n",
+      "train_loss (491000/500882): 2.3594141006469727\n",
+      "train_loss (492000/500882): 2.359360694885254\n"
      ]
     }
    ],
@@ -1113,10 +1136,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'ncf_params.pth')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "g"
+   ]
   }
  ],
  "metadata": {
