Started matrix factorization file, created user_item_matrix

--- a/matrix_factorization.ipynb
+++ b/matrix_factorization.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Shaan\\miniconda3\\envs\\pytorc\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +353,7 @@
        "4     0.221    0.9646  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +462,7 @@
        "4    20118          458    5.0    0.9646"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -531,34 +540,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>516440</th>\n",
-       "      <td>53231</td>\n",
-       "      <td>772</td>\n",
-       "      <td>0.779425</td>\n",
+       "      <th>394620</th>\n",
+       "      <td>58508</td>\n",
+       "      <td>6511</td>\n",
+       "      <td>0.369300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>376827</th>\n",
-       "      <td>13186</td>\n",
-       "      <td>6082</td>\n",
-       "      <td>0.991125</td>\n",
+       "      <th>601924</th>\n",
+       "      <td>5802</td>\n",
+       "      <td>2261</td>\n",
+       "      <td>0.856975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443178</th>\n",
-       "      <td>48227</td>\n",
-       "      <td>7216</td>\n",
-       "      <td>0.884450</td>\n",
+       "      <th>338353</th>\n",
+       "      <td>64323</td>\n",
+       "      <td>5749</td>\n",
+       "      <td>0.963875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>228107</th>\n",
-       "      <td>32590</td>\n",
-       "      <td>4786</td>\n",
-       "      <td>0.709000</td>\n",
+       "      <th>411498</th>\n",
+       "      <td>26263</td>\n",
+       "      <td>6472</td>\n",
+       "      <td>0.177725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>378349</th>\n",
-       "      <td>23572</td>\n",
-       "      <td>5945</td>\n",
-       "      <td>0.865725</td>\n",
+       "      <th>268281</th>\n",
+       "      <td>32215</td>\n",
+       "      <td>412</td>\n",
+       "      <td>0.889275</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -566,14 +575,14 @@
       ],
       "text/plain": [
        "        user_id  business_id     score\n",
-       "516440    53231          772  0.779425\n",
-       "376827    13186         6082  0.991125\n",
-       "443178    48227         7216  0.884450\n",
-       "228107    32590         4786  0.709000\n",
-       "378349    23572         5945  0.865725"
+       "394620    58508         6511  0.369300\n",
+       "601924     5802         2261  0.856975\n",
+       "338353    64323         5749  0.963875\n",
+       "411498    26263         6472  0.177725\n",
+       "268281    32215          412  0.889275"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +612,7 @@
        "(626103, 3)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +633,7 @@
        "\twith 626103 stored elements in COOrdinate format>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,34 +644,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse import coo_matrix\n",
     "\n",
     "user_item_matrix = coo_matrix((df_ncf2[\"score\"], (df_ncf2[\"user_id\"], df_ncf2[\"business_id\"])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = torch.tensor(df_ncf2.iloc[:,:-1].values), torch.tensor(df_ncf2.iloc[:,-1].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split = 0.8\n",
-    "split_idx = int(len(x) * split)\n",
-    "train_x, test_x, train_y, test_y = x[:split_idx], x[split_idx:], y[:split_idx], y[split_idx:]\n",
-    "data = (train_x, test_x, train_y, test_y)\n"
    ]
   }
  ],
