--- a/matrix_factorization.ipynb
+++ b/matrix_factorization.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Shaan\\miniconda3\\envs\\pytorc\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,7 +13,13 @@
     "from torch import nn\n",
     "import scipy.sparse as sp\n",
     "from scipy.sparse import csr_matrix\n",
-    "from scipy.sparse.linalg import svds\n"
+    "from scipy.sparse.linalg import svds\n",
+    "from scipy.sparse import coo_matrix\n",
+    "from sklearn.decomposition import NMF\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import scipy.sparse as sp\n"
    ]
   },
   {
@@ -482,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ncf2['score'] = (df_ncf2['stars'] + ((df_ncf2['compound'] + 1) * 2.5))/10"
+    "df_ncf2['score'] = ((df_ncf2['stars']-1) + ((df_ncf2['compound'] + 1) * 2))/8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -540,34 +537,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>394620</th>\n",
-       "      <td>58508</td>\n",
-       "      <td>6511</td>\n",
-       "      <td>0.369300</td>\n",
+       "      <th>438206</th>\n",
+       "      <td>59436</td>\n",
+       "      <td>6924</td>\n",
+       "      <td>0.996975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>601924</th>\n",
-       "      <td>5802</td>\n",
-       "      <td>2261</td>\n",
-       "      <td>0.856975</td>\n",
+       "      <th>84913</th>\n",
+       "      <td>18695</td>\n",
+       "      <td>3624</td>\n",
+       "      <td>0.711250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>338353</th>\n",
-       "      <td>64323</td>\n",
-       "      <td>5749</td>\n",
-       "      <td>0.963875</td>\n",
+       "      <th>286598</th>\n",
+       "      <td>14508</td>\n",
+       "      <td>864</td>\n",
+       "      <td>0.850275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>411498</th>\n",
-       "      <td>26263</td>\n",
-       "      <td>6472</td>\n",
-       "      <td>0.177725</td>\n",
+       "      <th>358683</th>\n",
+       "      <td>10819</td>\n",
+       "      <td>5127</td>\n",
+       "      <td>0.998175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>268281</th>\n",
-       "      <td>32215</td>\n",
-       "      <td>412</td>\n",
-       "      <td>0.889275</td>\n",
+       "      <th>614120</th>\n",
+       "      <td>65295</td>\n",
+       "      <td>2593</td>\n",
+       "      <td>0.871525</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -575,14 +572,14 @@
       ],
       "text/plain": [
        "        user_id  business_id     score\n",
-       "394620    58508         6511  0.369300\n",
-       "601924     5802         2261  0.856975\n",
-       "338353    64323         5749  0.963875\n",
-       "411498    26263         6472  0.177725\n",
-       "268281    32215          412  0.889275"
+       "438206    59436         6924  0.996975\n",
+       "84913     18695         3624  0.711250\n",
+       "286598    14508          864  0.850275\n",
+       "358683    10819         5127  0.998175\n",
+       "614120    65295         2593  0.871525"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,63 +591,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_item_matrix  = sp.coo_matrix((df_ncf2[\"score\"], (df_ncf2[\"user_id\"], df_ncf2[\"business_id\"])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(626103, 3)"
+       "0.8296074094421314"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ncf2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<68587x7314 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 626103 stored elements in COOrdinate format>"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user_item_matrix "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.sparse import coo_matrix\n",
+    "user_item_matrix  = sp.coo_matrix((df_ncf2[\"score\"], (df_ncf2[\"user_id\"], df_ncf2[\"business_id\"])), (num_users, num_businesses))\n",
     "\n",
-    "user_item_matrix = coo_matrix((df_ncf2[\"score\"], (df_ncf2[\"user_id\"], df_ncf2[\"business_id\"])))"
+    "W = user_item_matrix > 0\n",
+    "k = 20\n",
+    "model = NMF(n_components=20, init='nndsvd', random_state=0)\n",
+    "P = model.fit_transform(user_item_matrix, W=W)\n",
+    "Q = model.components_\n",
+    "R_hat = np.dot(P, Q)\n",
+    "\n",
+    "mask = (W == 1)\n",
+    "mask = mask.toarray()\n",
+    "user_item_matrix = user_item_matrix.toarray()\n",
+    "rmse = np.sqrt(np.mean((user_item_matrix[mask] - R_hat[mask])**2))\n",
+    "rmse"
    ]
   }
  ],
