--- a/data_split_mf_ncf.ipynb
+++ b/data_split_mf_ncf.ipynb
@@ -8,6 +8,8 @@
       },
       "outputs": [],
       "source": [
+        "%pip install torch pandas numpy matplotlib\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plot\n",
@@ -28,8 +30,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/MyDrive; to attempt to forcibly remount, call drive.mount(\"/content/MyDrive\", force_remount=True).\n"
           ]
@@ -37,7 +39,8 @@
       ],
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/MyDrive')"
+        "drive.mount('/content/MyDrive')\n",
+        "%cd /content/MyDrive/MyDrive"
       ]
     },
     {
@@ -52,15 +55,15 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/MyDrive/MyDrive\n"
           ]
         }
       ],
       "source": [
-        "%cd /content/MyDrive/MyDrive"
+        "base_dir = 'yelp_dataset' #input your base yelp dataset directory here"
       ]
     },
     {
@@ -71,7 +74,7 @@
       },
       "outputs": [],
       "source": [
-        "df_b = pd.read_csv('yelp_dataset/business.csv')"
+        "df_b = pd.read_csv(f'{base_dir}/business.csv')"
       ]
     },
     {
@@ -135,7 +138,7 @@
       },
       "outputs": [],
       "source": [
-        "df_users = pd.read_csv('yelp_dataset/users.csv')"
+        "df_users = pd.read_csv(f'{base_dir}/users.csv')"
       ]
     },
     {
@@ -185,14 +188,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "68587"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -225,14 +228,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([0., 1., 0., 0., 0., 0., 0., 0., 0., 0.])"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -247,7 +250,7 @@
       },
       "outputs": [],
       "source": [
-        "df_reviews = pd.read_csv('yelp_dataset/reviews.csv')"
+        "df_reviews = pd.read_csv(f'{base_dir}/reviews.csv')"
       ]
     },
     {
@@ -263,44 +266,7 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "                review_id                 user_id             business_id  \\\n",
-              "0  KU_O5udG6zpxOg-VcAEodg  mh_-eMZ6K5RLWhZyISBhwA  XQfwVwDr-v0ZS3_CbbE5Xw   \n",
-              "1  AqPFMleE6RsU23_auESxiA  _7bHUi9Uuf5__HHc_Q8guQ  kxX2SOes4o-D3ZQBkiMRfA   \n",
-              "2  Xs8Z8lmKkosqW5mw_sVAoA  IQsF3Rc6IgCzjVV9DE8KXg  eFvzHawVJofxSnD7TgbZtg   \n",
-              "3  G_5UczbCBJriUAbxz3J7Tw  clWLI5OZP2ad25ugMVI8gg  x4XdNhp0Xn8lOivzc77J-g   \n",
-              "4  DyrAIuKl60j_X8Yrrv-kpg  mNsVyC9tQVYtzLOCbh2Piw  MWmXGQ98KbRo3vsS5nZhMA   \n",
-              "\n",
-              "   stars  useful  funny  cool  \\\n",
-              "0    3.0       0      0     0   \n",
-              "1    5.0       1      0     1   \n",
-              "2    5.0       0      0     0   \n",
-              "3    5.0       0      0     0   \n",
-              "4    5.0       1      0     0   \n",
-              "\n",
-              "                                                text                 date  \\\n",
-              "0  If you decide to eat here, just be aware it is...  2018-07-07 22:09:11   \n",
-              "1  Wow!  Yummy, different,  delicious.   Our favo...  2015-01-04 00:01:03   \n",
-              "2  My absolute favorite cafe in the city. Their b...  2014-11-12 15:30:27   \n",
-              "3  Best thai food in the area.  Everything was au...  2013-08-15 15:27:51   \n",
-              "4  I recently had dinner here with my wife over t...  2014-10-27 02:47:28   \n",
-              "\n",
-              "                                               score  negative  neutral  \\\n",
-              "0  {'neg': 0.0, 'neu': 0.893, 'pos': 0.107, 'comp...     0.000    0.893   \n",
-              "1  {'neg': 0.0, 'neu': 0.66, 'pos': 0.34, 'compou...     0.000    0.660   \n",
-              "2  {'neg': 0.025, 'neu': 0.738, 'pos': 0.237, 'co...     0.025    0.738   \n",
-              "3  {'neg': 0.0, 'neu': 0.586, 'pos': 0.414, 'comp...     0.000    0.586   \n",
-              "4  {'neg': 0.026, 'neu': 0.753, 'pos': 0.221, 'co...     0.026    0.753   \n",
-              "\n",
-              "   positive  compound  \n",
-              "0     0.107    0.8597  \n",
-              "1     0.340    0.9588  \n",
-              "2     0.237    0.9679  \n",
-              "3     0.414    0.8910  \n",
-              "4     0.221    0.9646  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-b862941f-514b-42d7-8a9e-2fef3734ca00\">\n",
@@ -504,10 +470,47 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "                review_id                 user_id             business_id  \\\n",
+              "0  KU_O5udG6zpxOg-VcAEodg  mh_-eMZ6K5RLWhZyISBhwA  XQfwVwDr-v0ZS3_CbbE5Xw   \n",
+              "1  AqPFMleE6RsU23_auESxiA  _7bHUi9Uuf5__HHc_Q8guQ  kxX2SOes4o-D3ZQBkiMRfA   \n",
+              "2  Xs8Z8lmKkosqW5mw_sVAoA  IQsF3Rc6IgCzjVV9DE8KXg  eFvzHawVJofxSnD7TgbZtg   \n",
+              "3  G_5UczbCBJriUAbxz3J7Tw  clWLI5OZP2ad25ugMVI8gg  x4XdNhp0Xn8lOivzc77J-g   \n",
+              "4  DyrAIuKl60j_X8Yrrv-kpg  mNsVyC9tQVYtzLOCbh2Piw  MWmXGQ98KbRo3vsS5nZhMA   \n",
+              "\n",
+              "   stars  useful  funny  cool  \\\n",
+              "0    3.0       0      0     0   \n",
+              "1    5.0       1      0     1   \n",
+              "2    5.0       0      0     0   \n",
+              "3    5.0       0      0     0   \n",
+              "4    5.0       1      0     0   \n",
+              "\n",
+              "                                                text                 date  \\\n",
+              "0  If you decide to eat here, just be aware it is...  2018-07-07 22:09:11   \n",
+              "1  Wow!  Yummy, different,  delicious.   Our favo...  2015-01-04 00:01:03   \n",
+              "2  My absolute favorite cafe in the city. Their b...  2014-11-12 15:30:27   \n",
+              "3  Best thai food in the area.  Everything was au...  2013-08-15 15:27:51   \n",
+              "4  I recently had dinner here with my wife over t...  2014-10-27 02:47:28   \n",
+              "\n",
+              "                                               score  negative  neutral  \\\n",
+              "0  {'neg': 0.0, 'neu': 0.893, 'pos': 0.107, 'comp...     0.000    0.893   \n",
+              "1  {'neg': 0.0, 'neu': 0.66, 'pos': 0.34, 'compou...     0.000    0.660   \n",
+              "2  {'neg': 0.025, 'neu': 0.738, 'pos': 0.237, 'co...     0.025    0.738   \n",
+              "3  {'neg': 0.0, 'neu': 0.586, 'pos': 0.414, 'comp...     0.000    0.586   \n",
+              "4  {'neg': 0.026, 'neu': 0.753, 'pos': 0.221, 'co...     0.026    0.753   \n",
+              "\n",
+              "   positive  compound  \n",
+              "0     0.107    0.8597  \n",
+              "1     0.340    0.9588  \n",
+              "2     0.237    0.9679  \n",
+              "3     0.414    0.8910  \n",
+              "4     0.221    0.9646  "
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -549,14 +552,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1.0"
             ]
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -723,8 +726,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "cuda:0\n"
           ]
@@ -761,8 +764,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1:\n",
             "Train RMSE:0.21137215197086334\tTest Loss:0.20146197080612183\n",
@@ -810,15 +813,6 @@
       "source": [
         "torch.save(model.state_dict(), 'ncf_params.pth')"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "okkGyncahKEA"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
