--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "830f16f2",
+   "execution_count": null,
+   "id": "b0ae5bef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dir = 'yelp_dataset' #set your base directory here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de537e6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "business_json_path = 'D:\\FlavorFriend\\yelp_dataset\\\\yelp_academic_dataset_business.json'\n",
+    "business_json_path = f'{base_dir}/yelp_academic_dataset_business.json'\n",
     "df_b = pd.read_json(business_json_path, lines=True)\n"
    ]
   },
@@ -411,7 +421,7 @@
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "data_file = open(\"D:/FlavorFriend/yelp_dataset/yelp_academic_dataset_review.json\", encoding='utf-8')\n",
+    "data_file = open(f\"{base_dir}/yelp_academic_dataset_review.json\", encoding='utf-8')\n",
     "cutoffs = []\n",
     "for i in range(int(7000000/500000)+1):\n",
     "    cutoffs.append(i*500000)"
@@ -446,7 +456,7 @@
    "source": [
     "for j in range(len(cutoffs)-1):\n",
     "    data = []\n",
-    "    data_file = open(\"D:/FlavorFriend/yelp_dataset/yelp_academic_dataset_review.json\", encoding='utf-8')\n",
+    "    data_file = open(f\"{base_dir}/yelp_academic_dataset_review.json\", encoding='utf-8')\n",
     "    for i, line in enumerate(data_file):\n",
     "        if i >= cutoffs[j] and i < cutoffs[j+1]:\n",
     "            data.append(json.loads(line))\n",
@@ -461,7 +471,7 @@
     "            index_to_remove.append(index)\n",
     "    df.drop(index_to_remove, axis=0, inplace=True)\n",
     "    curr_df = pd.DataFrame(df)\n",
-    "    curr_df.to_csv('D:/FlavorFriend/yelp_dataset/PA_reviews/reviews_' + str(j) + \".csv\", index=False)\n"
+    "    curr_df.to_csv(f'{base_dir}/PA_reviews/reviews_' + str(j) + \".csv\", index=False)\n"
    ]
   },
   {
@@ -482,7 +492,7 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "folder_path = 'D:/FlavorFriend/yelp_dataset/PA_reviews'\n",
+    "folder_path = f'{base_dir}/PA_reviews'\n",
     "user_set = np.array([])\n",
     "review_counter = 0\n",
     "\n",
@@ -592,7 +602,7 @@
     "\n",
     "for j in range(len(cutoffs)-1):\n",
     "    data = []\n",
-    "    data_file = open(\"D:/FlavorFriend/yelp_dataset/yelp_academic_dataset_user.json\", encoding='utf-8')\n",
+    "    data_file = open(f\"{base_dir}/yelp_academic_dataset_user.json\", encoding='utf-8')\n",
     "    for i, line in enumerate(data_file):\n",
     "        if i >= cutoffs[j] and i < cutoffs[j+1]:\n",
     "            data.append(json.loads(line))\n",
@@ -608,7 +618,7 @@
     "            index_to_remove.append(index)\n",
     "    df.drop(index_to_remove, axis=0, inplace=True)\n",
     "    curr_df = pd.DataFrame(df)\n",
-    "    curr_df.to_csv('D:/FlavorFriend/yelp_dataset/PA_users/users_' + str(j) + \".csv\", index=False)\n",
+    "    curr_df.to_csv(f'{base_dir}/PA_users/users_' + str(j) + \".csv\", index=False)\n",
     "r_counter"
    ]
   },
@@ -675,7 +685,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "folder_path = 'D:/FlavorFriend/yelp_dataset/PA_reviews/'\n",
+    "folder_path = f'{base_dir}}/PA_reviews/'\n",
     "k = 0\n",
     "sid = SentimentIntensityAnalyzer()\n",
     "\n",
@@ -690,7 +700,7 @@
     "        df['compound'] = df['score'].apply(lambda txt: txt['compound'])\n",
     "        curr_df = pd.DataFrame(df)\n",
     "        k += 1\n",
-    "        curr_df.to_csv('D:/FlavorFriend/yelp_dataset/vader/PA_vader' + str(k) + \".csv\", index=False)\n",
+    "        curr_df.to_csv(f'{base_dir}/vader/PA_vader' + str(k) + \".csv\", index=False)\n",
     "        print(k)\n",
     "        "
    ]
@@ -720,7 +730,7 @@
     "users_dict = {}\n",
     "stars_sum = 0\n",
     "stars = None\n",
-    "folder_path = 'D:/FlavorFriend/yelp_dataset/PA_reviews/'\n",
+    "folder_path = f'{base_dir}}/PA_reviews/'\n",
     "\n",
     "for filename in os.listdir(folder_path):\n",
     "    file_path = os.path.join(folder_path, filename)\n",
@@ -905,7 +915,7 @@
     "import pandas as pd\n",
     "\n",
     "final_df = None\n",
-    "folder_path = 'D:/FlavorFriend/yelp_dataset/PA_vader/'\n",
+    "folder_path = f'{base_dir}/PA_vader/'\n",
     "\n",
     "for filename in os.listdir(folder_path):\n",
     "    file_path = os.path.join(folder_path, filename)\n",
@@ -917,7 +927,7 @@
     "        else:\n",
     "            final_df = pd.concat([final_df, df], axis=0)\n",
     "        \n",
-    "final_df.to_csv(\"D:/FlavorFriend/yelp_dataset/cleaned_data/reviews.csv\", index=False)"
+    "final_df.to_csv(f\"{base_dir}/cleaned_data/reviews.csv\", index=False)"
    ]
   },
   {
@@ -956,7 +966,7 @@
     "users_dict = {}\n",
     "stars = None\n",
     "sentiment = None\n",
-    "folder_path = \"D:/FlavorFriend/yelp_dataset/cleaned_data/reviews.csv\"\n",
+    "folder_path = f\"{base_dir}/cleaned_data/reviews.csv\"\n",
     "df = pd.read_csv(folder_path)\n",
     "print(df.shape)\n",
     "if stars is None:\n",
@@ -1151,11 +1161,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "business_json_path = 'D:\\FlavorFriend\\yelp_dataset\\\\yelp_academic_dataset_user.json'\n",
+    "business_json_path = f'{base_dir}/yelp_academic_dataset_user.json'\n",
     "df = pd.read_json(business_json_path, lines=True)\n",
     "index_to_keep = df[df[\"user_id\"].isin(users_to_keep)].index\n",
     "df = df.loc[index_to_keep]\n",
-    "df.to_csv('D:/FlavorFriend/yelp_dataset/cleaned_data/users.csv', index=False)"
+    "df.to_csv(f'{base_dir}/cleaned_data/users.csv', index=False)"
    ]
   },
   {
@@ -1194,7 +1204,7 @@
     }
    ],
    "source": [
-    "business_json_path = 'D:\\FlavorFriend\\yelp_dataset\\\\yelp_academic_dataset_business.json'\n",
+    "business_json_path = f'{base_dir}/yelp_academic_dataset_business.json'\n",
     "df_b = pd.read_json(business_json_path, lines=True)\n",
     "num = 0\n",
     "i = 0\n",
@@ -1219,7 +1229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_b.to_csv('D:/FlavorFriend/yelp_dataset/cleaned_data/business.csv', index=False)"
+    "df_b.to_csv(f'{base_dir}/cleaned_data/business.csv', index=False)"
    ]
   }
  ],
